--- a/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
+++ b/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
@@ -13,27 +13,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:layout_below="@+id/ShowPairedDevices"
+        android:layout_below="@+id/bScan"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rescan"
-        android:id="@+id/ShowPairedDevices"
+        android:text="Scan"
+        android:id="@+id/bScan"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:onClick="onShowPairedDevicesClicked" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:id="@+id/editText"
-        android:layout_above="@+id/listView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="Paired devices:" />
+        android:layout_centerHorizontal="true"
+        android:onClick="onScanClicked" />
 
 </RelativeLayout>
