--- a/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
+++ b/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/listView"
         android:layout_below="@+id/bScan"
+        android:layout_above="@+id/bMsg"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -25,5 +26,14 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:onClick="onScanClicked" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send data"
+        android:id="@+id/bMsg"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="onSentDataClicked" />
 
 </RelativeLayout>
