A: receiving data via BT (LB changed on the purpose for testing)

--- a/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
+++ b/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
@@ -9,15 +9,6 @@
     tools:context=".ConnectionActivity">
 
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/bScan"
-        android:layout_above="@+id/bMsg"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,13 +18,41 @@
         android:layout_centerHorizontal="true"
         android:onClick="onScanClicked" />
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/bScan"
+        android:layout_alignBottom="@+id/ReceivedData"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="fg"
+        android:id="@+id/ReceivedData"
+        android:layout_above="@+id/bMsg"
+        android:layout_centerHorizontal="true" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send data"
         android:id="@+id/bMsg"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
         android:onClick="onSentDataClicked" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Other data"
+        android:id="@+id/bOtherMsg"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:onClick="onSentOtherDataClicked" />
+
 
 </RelativeLayout>
