--- a/Android/Hexapod/app/src/main/res/layout/activity_steering.xml
+++ b/Android/Hexapod/app/src/main/res/layout/activity_steering.xml
@@ -64,5 +64,13 @@
         android:layout_alignEnd="@+id/textReceived"
         android:layout_marginTop="25dp" />
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_below="@+id/textReceived"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
