--- a/Android/Hexapod/app/src/main/res/layout-land/activity_steering.xml
+++ b/Android/Hexapod/app/src/main/res/layout-land/activity_steering.xml
@@ -34,6 +34,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -95,7 +103,6 @@
         android:layout_below="@id/bPower"
         android:layout_above="@+id/batteryBar"
         android:layout_centerHorizontal="true"
-
         android:adjustViewBounds="false" />
 
     <ProgressBar
