android: intro window, backgroud color added

--- a/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
+++ b/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
@@ -1,5 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+
+    android:background="#660099"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,9 +13,11 @@
 
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Scan"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:textSize="30sp"
+        android:textColor="#40e0d0"
+        android:text="Scan for some robots!"
         android:id="@+id/bScan"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -23,18 +28,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/listView"
         android:layout_below="@+id/bScan"
-        android:layout_alignBottom="@+id/ReceivedData"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="fg"
-        android:id="@+id/ReceivedData"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
