--- a/Android/Hexapod/app/src/main/res/layout/activity_steering.xml
+++ b/Android/Hexapod/app/src/main/res/layout/activity_steering.xml
@@ -1,35 +1,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#502B64"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.jtrzyna.hexapod.SteeringActivity">
 
 
     <TextView
+        android:textColor="#40e0d0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="connected to:"
         android:id="@+id/textState"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp" />
 
     <TextView
+        android:textColor="#40e0d0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="no msg"
         android:id="@+id/textReceived"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textState" />
+        android:layout_below="@+id/textState"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"/>
 
     <ToggleButton
-        android:layout_width="150dp"
+        android:textSize="20sp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:textOff="Power"
         android:textOn="Power"
@@ -38,11 +41,13 @@
         android:layout_below="@+id/textReceived"
         android:layout_alignRight="@+id/textReceived"
         android:layout_alignEnd="@+id/textReceived"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="25dp" />
 
 
     <ToggleButton
-        android:layout_width="150dp"
+        android:textSize="20sp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:textOff="Base Position"
         android:textOn="Base Position"
@@ -51,7 +56,9 @@
         android:layout_below="@+id/textReceived"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="10dp"
+        android:elegantTextHeight="false" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
@@ -66,18 +73,25 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
         android:src="@drawable/steering_wheel"
-        android:layout_below="@id/bPower"
-        android:layout_above="@+id/batteryBar"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="steeringWheel" />
+        android:contentDescription="steeringWheel"
+        android:layout_below="@+id/bBasePosition"
+        android:layout_above="@+id/napis_synergia"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/napis_synergia"
+        android:src="@drawable/napis_synergia2"
+        android:layout_alignParentBottom="true" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
+        android:visibility="invisible"
         android:layout_height="5dp"
         android:id="@+id/batteryBar"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true" />
-
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
