--- a/Android/Hexapod/app/src/main/res/menu/steering.xml
+++ b/Android/Hexapod/app/src/main/res/menu/steering.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.jtrzyna.hexapod.SteeringActivity" >
     <item android:id="@+id/about"
-        android:title="created by J.Trzyna"/>
+        android:title="credits"/>
     <item android:id="@+id/exit"
         android:title="exit" />
 </menu>
