--- a/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
+++ b/Android/Hexapod/app/src/main/res/layout/activity_connection.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:background="#502B64"
+    android:background="#533770"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -14,14 +14,15 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:textSize="30sp"
-        android:textColor="#40e0d0"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textColor="#fcfcfc"
         android:text="Scan for some robots!"
         android:id="@+id/bScan"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:onClick="onScanClicked" />
+        android:onClick="onScanClicked"
+        android:singleLine="true" />
 
     <ListView
         android:layout_width="wrap_content"
